@startuml

class ManagerSetController {
  -flashcardSetService: FlashcardSetService
  +rejectedFlashcardSet(myUserDetail: MyUserDetail, setId: long): ResponseEntity<?>
}

class FlashcardSetService {
  -flashcardSetRepository: FlashcardSetRepository
  -sendEmailService: SendEmailService
  +rejectedFlashcardSet(setId: long, user: User): void
}

class MyUserDetail

class User {
  // attributes...
}

interface FlashcardSetRepository {
  +getFlashcardSetByFlashcardSetId(setId: long): FlashcardSet
}

class FlashcardSet {
  // attributes...
}

class SendEmailService {
  +sendRejectedEmail(email: String, userName: String, title: String, publicAt: Date, description: String): void
}

ManagerSetController -- FlashcardSetService : has
FlashcardSetService -- FlashcardSetRepository : uses
FlashcardSetService -- SendEmailService : uses
MyUserDetail -- User : uses
ManagerSetController -- MyUserDetail : uses
FlashcardSetRepository -- FlashcardSet : uses

@enduml
